<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name" translatable="false">Fireblood</string>
    <string name="app_slogan">Blood Donations Made Simple</string>
    <string name="authentication_title_sign_up">Sign up</string>
    <string name="authentication_title_sign_in">Sign in</string>
    <string name="authentication_title_forgot_password">Forgot Password</string>
    <string name="authentication_title_verify_email">Verify Email</string>
    <string name="authentication_label_already_a_user">Already a user?</string>
    <string name="authentication_label_forgot_your_password_underlined"><u>Forgot your password?</u></string>
    <string name="authentication_label_sign_in_underlined"><u>Sign in!</u></string>
    <string name="authentication_label_send_email">Send Email</string>
    <string name="authentication_label_almost_there">Almost there!</string>
    <string name="authentication_label_an_email_has_been_sent_to">An email has been sent to:</string>
    <string name="authentication_label_waiting_for_verification">Waiting for verification&#8230;</string>
    <string name="authentication_label_havent_received_the_email_yet">Haven\'t received the email yet?</string>
    <string name="account_title">Account</string>
    <string name="account_label_email">Email</string>
    <string name="account_label_username">Username</string>
    <string name="account_label_password">Password</string>
    <string name="account_label_email_or_username">Email or Username</string>
    <string name="profile_title">Profile</string>
    <string name="profile_label_first_name">First Name</string>
    <string name="profile_label_last_name">Last Name</string>
    <string name="profile_label_phone">Phone</string>
    <string name="profile_label_phone_hint" translatable="false">8#9#######</string>
    <string name="profile_label_gender">Gender</string>
    <string name="profile_label_gender_female">Female</string>
    <string name="profile_label_gender_male">Male</string>
    <string name="profile_label_birthday">Birthday</string>
    <string name="profile_label_province">Province</string>
    <string name="profile_label_hospital">Hospital</string>
    <string name="profile_label_blood_type">Blood Type</string>
    <string name="profile_label_is_donor">Is Donor?</string>
    <string name="profile_subheading_about_me">About me</string>
    <string name="profile_information_user_age">I have <xliff:g id="user_age">%d</xliff:g> years old.</string>
    <string name="profile_information_user_gender_female">I am a woman.</string>
    <string name="profile_information_user_gender_male">I am a man.</string>
    <string name="profile_subheading_blood_information">Blood Information</string>
    <string name="profile_information_user_blood_type">I have <xliff:g id="user_blood_type">%s</xliff:g> blood.</string>
    <string name="profile_information_user_is_donor_false">I am not currently donating blood.</string>
    <string name="profile_information_user_is_donor_true">I am currently donating blood.</string>
    <string name="profile_subheading_hospital">Hospital</string>
    <string name="profile_subheading_contact_me">Contact me</string>
    <string name="profile_body_show_location">Show Location</string>
    <string name="profile_body_send_email">Send Email</string>
    <string name="profile_body_make_call">Make Call</string>
    <string name="profile_body_send_message">Send Message</string>
    <string name="placeholder_select_an_option">Select an option&#8230;</string>
    <string name="title_cancel_sign_up">Cancel Sign up</string>
    <string name="title_signing_up">Signing up</string>
    <string name="title_signing_in">Signing in</string>
    <string name="title_select_hospital">Select Hospital</string>
    <string name="title_sending_recovery_email">Sending Recovery Email</string>
    <string name="title_send_verification_email">Send Verification Email</string>
    <string name="title_sending_verification_email">Sending Verification Email</string>
    <string name="title_search_for_hospitals">Search for Hospitals</string>
    <string name="title_donors">Donors</string>
    <string name="title_request_blood">Request Blood</string>
    <string name="title_requesting_blood">Requesting Blood</string>
    <string name="title_cancel_edit_profile">Cancel Edit Profile</string>
    <string name="title_editing_profile">Editing Profile</string>
    <string name="title_edit_profile_photo">Edit Profile Photo</string>
    <string name="message_are_you_sure">Are you sure?</string>
    <string name="message_please_select_a_province_first">Please select a Province first.</string>
    <string name="message_please_check_your_internet_connection">Please check your Internet connection.</string>
    <string name="message_action_canceled">Action canceled.</string>
    <string name="message_please_wait_a_few_seconds">Please wait a few seconds&#8230;</string>
    <string name="message_an_error_has_occurred">An error has occurred.</string>
    <string name="message_the_credentials_did_not_match_our_records">The credentials did not match our records.</string>
    <string name="message_recovery_email_sent">Recovery email sent!</string>
    <string name="message_verification_email_sent">Verification email sent!</string>
    <string name="message_waiting_for_hospitals">Waiting for hospitals&#8230;</string>
    <string name="message_no_donors_have_registered">No donors have registered.</string>
    <string name="message_blood_successfully_requested">Blood successfully requested.</string>
    <string name="message_the_data_has_not_loaded_yet">The data has not loaded yet.</string>
    <string name="message_no_application_was_found">No application was found.</string>
    <string name="message_the_photo_has_not_processed_yet">The photo has not processed yet.</string>
    <string name="message_profile_photo_successfully_edited">Profile photo successfully edited.</string>
    <string name="message_profile_successfully_edited">Profile successfully edited.</string>
    <string name="label_gallery">Gallery</string>
    <string name="label_remove_photo">Remove photo</string>
    <string name="validation_please_complete_the_field">Please complete the field.</string>
    <string name="validation_please_select_an_option">Please select an option.</string>
    <string name="validation_validation_failed">Validation failed!</string>
    <string name="validation_please_enter_a_valid_email">Please enter a valid email.</string>
    <string name="validation_please_enter_a_valid_username">Please enter a valid username.</string>
    <string name="validation_please_enter_a_valid_password">Please enter a valid password.</string>
    <string name="validation_please_enter_a_valid_phone">Please enter a valid phone.</string>
    <string name="validation_the_email_is_in_use">The email is in use.</string>
    <string name="validation_the_username_is_in_use">The username is in use.</string>
    <string name="validation_please_enter_a_valid_email_or_username">Please enter a valid email or username.</string>
    <string name="validation_the_username_is_not_registered">The username is not registered.</string>
    <string name="validation_the_email_is_not_registered">The email is not registered.</string>
    <string name="validation_no_data_has_changed">No data has changed.</string>
    <string name="hospital_donors_snippet">Donors: <xliff:g id="donors_count">%,d</xliff:g></string>
    <string name="hospital_donors_including_you_snippet">Donors: <xliff:g id="donors_count">%,d</xliff:g> (including you)</string>
    <string name="donor_label_created_at" translatable="false">est.:</string>
    <string name="request_label_blood_quantity">Blood Quantity:</string>
    <string name="request_label_requires_plasma">Requires plasma?</string>
    <string name="request_label_requires_platelets">Requires platelets?</string>
    <string name="request_label_message">Message</string>
    <string name="request_information_blood_quantity"><xliff:g id="current_blood_quantity">%.2f</xliff:g> / <xliff:g id="max_blood_quantity">%.2f</xliff:g> litre(s)</string>
    <string name="menu_item_sign_out">Sign out</string>
    <string name="menu_item_share">Share</string>
    <string name="menu_item_save">Save</string>
    <string name="navigation_item_notifications">Notifications</string>
    <string name="navigation_item_search">Search</string>
    <string name="navigation_item_profile">Profile</string>
    <string name="navigation_item_view_photo">View Photo</string>
    <string name="navigation_item_edit_profile">Edit Profile</string>
    <string name="array_province_azua" translatable="false">Azua</string>
    <string name="array_province_bahoruco" translatable="false">Bahoruco</string>
    <string name="array_province_barahona" translatable="false">Barahona</string>
    <string name="array_province_dajabon" translatable="false">Dajabón</string>
    <string name="array_province_duarte" translatable="false">Duarte</string>
    <string name="array_province_el_seibo" translatable="false">El Seibo</string>
    <string name="array_province_elias_pina" translatable="false">Elías Piña</string>
    <string name="array_province_espaillat" translatable="false">Espaillat</string>
    <string name="array_province_hato_mayor" translatable="false">Hato Mayor</string>
    <string name="array_province_hermanas_mirabal" translatable="false">Hermanas Mirabal</string>
    <string name="array_province_independencia" translatable="false">Independencia</string>
    <string name="array_province_la_altagracia" translatable="false">La Altagracia</string>
    <string name="array_province_la_romana" translatable="false">La Romana</string>
    <string name="array_province_la_vega" translatable="false">La Vega</string>
    <string name="array_province_maria_trinidad_sanchez" translatable="false">María Trinidad Sánchez</string>
    <string name="array_province_monsenor_nouel" translatable="false">Monseñor Nouel</string>
    <string name="array_province_monte_cristi" translatable="false">Monte Cristi</string>
    <string name="array_province_monte_plata" translatable="false">Monte Plata</string>
    <string name="array_province_pedernales" translatable="false">Pedernales</string>
    <string name="array_province_peravia" translatable="false">Peravia</string>
    <string name="array_province_puerto_plata" translatable="false">Puerto Plata</string>
    <string name="array_province_samana" translatable="false">Samaná</string>
    <string name="array_province_san_cristobal" translatable="false">San Cristóbal</string>
    <string name="array_province_san_jose_de_ocoa" translatable="false">San José de Ocoa</string>
    <string name="array_province_san_juan" translatable="false">San Juan</string>
    <string name="array_province_san_pedro_de_macoris" translatable="false">San Pedro de Macorís</string>
    <string name="array_province_santiago" translatable="false">Santiago</string>
    <string name="array_province_santiago_rodriguez" translatable="false">Santiago Rodríguez</string>
    <string name="array_province_santo_domingo" translatable="false">Santo Domingo</string>
    <string name="array_province_sanchez_ramirez" translatable="false">Sánchez Ramírez</string>
    <string name="array_province_valverde" translatable="false">Valverde</string>
    <string name="array_blood_type_a_plus" translatable="false">A+</string>
    <string name="array_blood_type_a_minus" translatable="false">A-</string>
    <string name="array_blood_type_ab_plus" translatable="false">AB+</string>
    <string name="array_blood_type_ab_minus" translatable="false">AB-</string>
    <string name="transition_app_logo_image_view" translatable="false">app_logo_image_view</string>
    <string name="transition_user_photo_image_view" translatable="false">user_photo_image_view</string>
    <string name="transition_edit_profile_image_view" translatable="false">edit_profile_image_view</string>
</resources>