<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_navigation"
    tools:context=".ui.MainActivity">

    <item
        android:id="@+id/notifications_navigation_item"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/navigation_item_notifications"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/search_navigation_item"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/navigation_item_search"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/profile_navigation_item"
        android:icon="@drawable/ic_person_black_24dp"
        android:title="@string/navigation_item_profile"
        app:showAsAction="ifRoom" />
</menu>
