<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/edit_profile_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:fillViewport="true"
    tools:context=".ui.navigation.profile.EditProfileActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        android:padding="@dimen/margin_standard">

        <RelativeLayout
            android:id="@+id/photo_relative_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true">

            <ImageView
                android:id="@+id/photo_image_view"
                android:layout_width="@dimen/image_size_medium"
                android:layout_height="@dimen/image_size_medium"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="@dimen/margin_quarter"
                android:layout_marginTop="@dimen/margin_quarter"
                android:background="@drawable/background_profile_image_view"
                android:elevation="@dimen/margin_quarter"
                android:scaleType="centerCrop"
                android:src="@mipmap/ic_launcher"
                android:transitionName="@string/transition_user_photo_image_view" />

            <ImageView
                android:id="@+id/edit_profile_image_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/photo_image_view"
                android:layout_marginBottom="@dimen/margin_quarter"
                android:layout_marginStart="@dimen/margin_standard_half_minus"
                android:layout_marginTop="@dimen/margin_standard_half_quarter_minus"
                android:layout_toEndOf="@id/photo_image_view"
                android:background="@drawable/background_profile_image_view"
                android:elevation="@dimen/margin_quarter"
                android:src="@drawable/ic_edit_red_24dp"
                android:transitionName="@string/transition_edit_profile_image_view" />

            <ProgressBar
                android:id="@+id/photo_progress_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:elevation="@dimen/margin_quarter"
                android:indeterminateTint="@color/colorPrimaryDark"
                android:indeterminateTintMode="src_atop"
                android:visibility="gone" />
        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_half"
            android:fontFamily="sans-serif-light"
            android:text="@string/profile_title"
            android:textAppearance="@android:style/TextAppearance.Material.Display1"
            android:textColor="@color/colorPrimary" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <android.support.design.widget.TextInputLayout
                style="@style/AppMainEditTextWrapper"
                android:layout_width="@dimen/margin_none"
                android:layout_weight="1">

                <EditText
                    android:id="@+id/first_name_edit_text"
                    style="@style/AppMainEditText"
                    android:hint="@string/profile_label_first_name"
                    android:inputType="textPersonName"
                    android:maxLength="@integer/max_length_first_name"
                    android:nextFocusDown="@+id/last_name_edit_text" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                style="@style/AppMainEditTextWrapper"
                android:layout_width="@dimen/margin_none"
                android:layout_weight="1">

                <EditText
                    android:id="@+id/last_name_edit_text"
                    style="@style/AppMainEditText"
                    android:hint="@string/profile_label_last_name"
                    android:inputType="textPersonName"
                    android:maxLength="@integer/max_length_last_name" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <android.support.design.widget.TextInputLayout
            style="@style/AppMainEditTextWrapper"
            android:hint="@string/profile_label_phone">

            <EditText
                android:id="@+id/phone_edit_text"
                style="@style/AppMainEditText"
                android:digits="0123456789"
                android:hint=""
                android:inputType="phone"
                android:maxLength="@integer/max_length_phone" />
        </android.support.design.widget.TextInputLayout>

        <TextView
            style="@style/AppMainFormFieldText"
            android:text="@string/profile_label_gender" />

        <RadioGroup
            android:id="@+id/gender_radio_group"
            style="@style/AppRadioGroup">

            <RadioButton
                android:id="@+id/gender_radio_button_female"
                style="@style/AppMainRadioButton"
                android:text="@string/profile_label_gender_female" />

            <RadioButton
                android:id="@+id/gender_radio_button_male"
                style="@style/AppMainRadioButton"
                android:text="@string/profile_label_gender_male" />
        </RadioGroup>

        <View style="@style/AppMainUnderlinedView" />

        <android.support.design.widget.TextInputLayout
            style="@style/AppMainEditTextWrapper"
            android:layout_marginTop="@dimen/margin_standard">

            <EditText
                android:id="@+id/birthday_edit_text"
                style="@style/AppMainEditText"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:hint="@string/profile_label_birthday"
                android:longClickable="false"
                android:maxLength="@integer/max_length_birthday" />
        </android.support.design.widget.TextInputLayout>

        <TextView
            style="@style/AppMainFormFieldText"
            android:text="@string/profile_label_province" />

        <Spinner
            android:id="@+id/province_spinner"
            style="@style/AppSpinner" />

        <android.support.design.widget.TextInputLayout style="@style/AppMainEditTextWrapper">

            <EditText
                android:id="@+id/hospital_edit_text"
                style="@style/AppMainEditText"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:hint="@string/profile_label_hospital"
                android:inputType="textNoSuggestions"
                android:longClickable="false"
                android:maxLength="@integer/max_length_hospital" />
        </android.support.design.widget.TextInputLayout>

        <TextView
            style="@style/AppMainFormFieldText"
            android:text="@string/profile_label_blood_type" />

        <Spinner
            android:id="@+id/blood_type_spinner"
            style="@style/AppSpinner" />

        <TextView
            style="@style/AppMainFormFieldText"
            android:text="@string/profile_label_is_donor" />

        <Switch
            android:id="@+id/is_donor_switch"
            style="@style/AppSwitch" />

        <View style="@style/AppMainUnderlinedView" />

        <View style="@style/AppVerticalDividerView" />
    </LinearLayout>
</ScrollView>
