<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_sign_up"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:fillViewport="true"
    tools:context=".SignUpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_none"
            android:layout_margin="@dimen/margin_standard"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/app_logo_image_view"
                android:layout_width="@dimen/icon_size_small"
                android:layout_height="@dimen/icon_size_small"
                android:layout_gravity="center_horizontal"
                android:scaleType="centerCrop"
                android:src="@mipmap/ic_launcher"
                android:transitionName="@string/transition_app_logo_image_view" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_half"
                android:fontFamily="sans-serif-light"
                android:text="@string/account_title"
                android:textAppearance="@android:style/TextAppearance.Material.Display1" />

            <LinearLayout style="@style/AppVerticalFormFieldWrapper">

                <android.support.design.widget.TextInputLayout style="@style/AppEditTextWrapper">

                    <EditText
                        android:id="@+id/email_edit_text"
                        style="@style/AppEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/account_label_email"
                        android:inputType="textEmailAddress" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <LinearLayout style="@style/AppVerticalFormFieldWrapper">

                <android.support.design.widget.TextInputLayout
                    style="@style/AppEditTextWrapper"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="@color/colorPrimaryText">

                    <EditText
                        android:id="@+id/password_edit_text"
                        style="@style/AppEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/account_label_password"
                        android:inputType="textPassword" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_half"
                android:fontFamily="sans-serif-light"
                android:text="@string/profile_title"
                android:textAppearance="@android:style/TextAppearance.Material.Display1" />

            <LinearLayout style="@style/AppVerticalFormFieldWrapper">

                <android.support.design.widget.TextInputLayout style="@style/AppEditTextWrapper">

                    <EditText
                        android:id="@+id/first_name_edit_text"
                        style="@style/AppEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/profile_label_first_name"
                        android:inputType="textPersonName"
                        android:nextFocusDown="@+id/last_name_edit_text" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout style="@style/AppEditTextWrapper">

                    <EditText
                        android:id="@+id/last_name_edit_text"
                        style="@style/AppEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/profile_label_last_name"
                        android:inputType="textPersonName" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <LinearLayout style="@style/AppVerticalFormFieldWrapper">

                <android.support.design.widget.TextInputLayout style="@style/AppEditTextWrapper">

                    <EditText
                        android:id="@+id/birthday_edit_text"
                        style="@style/AppEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:hint="@string/profile_label_birthday"
                        android:longClickable="false" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <LinearLayout style="@style/AppVerticalFormFieldWrapper">

                <TextView
                    style="@style/AppFormFieldText"
                    android:text="@string/profile_label_gender" />

                <RadioGroup
                    android:id="@+id/gender_radio_group"
                    style="@style/AppRadioGroup">

                    <RadioButton
                        android:id="@+id/gender_radio_button_female"
                        style="@style/AppRadioButton"
                        android:text="@string/profile_label_gender_female" />

                    <RadioButton
                        android:id="@+id/gender_radio_button_male"
                        style="@style/AppRadioButton"
                        android:text="@string/profile_label_gender_male" />
                </RadioGroup>
            </LinearLayout>

            <LinearLayout style="@style/AppVerticalFormFieldWrapper">

                <android.support.design.widget.TextInputLayout
                    style="@style/AppEditTextWrapper"
                    android:hint="@string/profile_label_phone">

                    <EditText
                        android:id="@+id/phone_edit_text"
                        style="@style/AppEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:digits=" -0123456789+"
                        android:inputType="phone"
                        android:maxLength="15" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <LinearLayout style="@style/AppVerticalFormFieldWrapper">

                <TextView
                    style="@style/AppFormFieldText"
                    android:text="@string/profile_label_province" />

                <Spinner
                    android:id="@+id/province_spinner"
                    style="@style/AppSpinner" />
            </LinearLayout>

            <LinearLayout style="@style/AppVerticalFormFieldWrapper">

                <android.support.design.widget.TextInputLayout style="@style/AppEditTextWrapper">

                    <EditText
                        android:id="@+id/hospital_edit_text"
                        style="@style/AppEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:hint="@string/profile_label_hospital"
                        android:inputType="textNoSuggestions"
                        android:longClickable="false" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <LinearLayout style="@style/AppVerticalFormFieldWrapper">

                <TextView
                    style="@style/AppFormFieldText"
                    android:text="@string/profile_label_blood_type" />

                <Spinner
                    android:id="@+id/blood_type_spinner"
                    style="@style/AppSpinner" />
            </LinearLayout>

            <LinearLayout style="@style/AppVerticalFormFieldWrapper">

                <Switch
                    android:id="@+id/is_donor_switch"
                    style="@style/AppSwitch"
                    android:text="@string/profile_label_is_donor" />
            </LinearLayout>
        </LinearLayout>

        <FrameLayout style="@style/AppInverseBorderlessButtonWrapper">

            <Button
                android:id="@+id/sign_up_button"
                style="@style/AppInverseBorderlessButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/authentication_sign_up" />
        </FrameLayout>
    </LinearLayout>
</ScrollView>
