<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/welcome_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:fillViewport="true"
    tools:context=".ui.WelcomeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/margin_standard">

        <ImageView
            android:id="@+id/app_logo_image_view"
            android:layout_width="@dimen/icon_size_large"
            android:layout_height="@dimen/icon_size_large"
            android:layout_gravity="center_horizontal"
            android:scaleType="centerCrop"
            android:src="@mipmap/ic_launcher"
            android:transitionName="@string/transition_app_logo_image_view" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/margin_half"
            android:fontFamily="sans-serif-light"
            android:text="@string/app_slogan"
            android:textAppearance="@android:style/TextAppearance.Material.Title" />

        <View style="@style/AppVerticalDividerView" />

        <Button
            android:id="@+id/sign_up_button"
            style="@style/AppInverseButton"
            android:layout_width="@dimen/button_size_large"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/margin_half"
            android:text="@string/authentication_title_sign_up" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/margin_half"
            android:text="@string/authentication_label_already_a_user"
            android:textAppearance="@android:style/TextAppearance.Material.Body1" />

        <Button
            android:id="@+id/sign_in_button"
            style="@style/AppInverseButton"
            android:layout_width="@dimen/button_size_large"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/authentication_title_sign_in" />
    </LinearLayout>
</ScrollView>
