<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/photo_bottom_sheet_dialog"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    app:layout_behavior="android.support.design.widget.BottomSheetBehavior">

    <TextView
        android:id="@+id/title_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_standard"
        android:layout_marginStart="@dimen/margin_standard"
        android:layout_marginTop="@dimen/margin_standard"
        android:text="@string/title_edit_profile_photo"
        android:textAppearance="@android:style/TextAppearance.Material.Title"
        android:textColor="@color/colorPrimary" />

    <TextView
        android:id="@+id/gallery_button_text_view"
        style="@style/AppBottomSheetDialogOption"
        android:drawableStart="@drawable/ic_photo_library_gray_24dp"
        android:text="@string/label_gallery" />

    <TextView
        android:id="@+id/remove_photo_button_text_view"
        style="@style/AppBottomSheetDialogOption"
        android:drawableStart="@drawable/ic_delete_gray_24dp"
        android:text="@string/label_remove_photo" />
</LinearLayout>
